# annie-rose

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/3host/: README.md  app.py
examples/3host/lib/: a_qim_client.py  b_qim_client.py  qim_client.py
examples/bobwire/: 3host.json  CONTROLLER_LOG  README.md  app.py  test.py
examples/bobwire/lib/: a_qim_client.py  b_qim_client.py
userguide/: userguide.tex
